# MonopropUAV

./: .gitignore  .gitmodules  6-axis data collection  README.md  finalFirmware_skeleton.cpp:Zone.Identifier  imu_at_rest.csv  lidar_at_rest.csv  pyvenv.cfg  simulation_results.csv
Algorithms/: AlgorithmsStatus.md  README.md
Algorithms/DynamicsModel/: 1D_Rocket_Fuel_Sim.py  Monoprop_Dynamics.m  Monoprop_Dynamics2.m  acceleration_history.csv  angular_velocity_history.csv  error_history.csv  eulers_data.csv  histories.csv  monocopter_data.csv  monocopter_dynamics_model.m  monocopter_dynamics_with_PID_sinusoidal.m  (+10 more)
AvionicsFirmware/: GPSArduino.cpp  IMU_9_Data_Collection_Code.cpp  ReadMe  VCSELDraft.ino.ino
ControlLoop/: EKF_xy.cpp  EKF_xy.h  EKF_z.cpp  EKF_z.h  EigenTester.cpp  ExtendedKalmanFilterGeneral.cpp  ExtendedKalmanFilterGeneral.h  Madgwick.h  Matrix.cpp  Matrix.h  Newton-Kleinman.cpp  README.md  ax6_imu_data.csv  control_lookup_a.csv  control_lookup_b.csv  data_mocker  data_mocker.cpp  eigentester  imu_data.csv  init.cpp  init.h  latency.csv  lidar_data.csv  loop.cpp  loop.h  lqr.cpp  lqr.h  makefile  print.cpp  print.h  run_sim.sh  solveCARE.cpp  solveCARE.h  state.csv  system_com_shift.csv  updatedMadgwick.cpp  uwb_combined_distances.csv
ControlLoop/IntegratedDynModel/: CMakeLists.txt  IntegratedPlotter.py  integratedDynMode.cpp  integratedDynModel.h  wslIntegratedPlotter.py
ControlLoopMPC/: README.md
Electronics/: 6-axis IMU.kicad_sch  Comms PCB Dimensions + Footprints V1.kicad_pcb  Comms module.kicad_sch  Compute's block.kicad_sch  DWM1000 stuff.txt  First Attempt  IMU-9-axis.kicad_sch  Sensors block .kicad_sch  Teensy 4.1 I2C Wire Communication  UART_Communications_Module.cpp  UBX_GPS_UART.ino  UWB.BOM.csv  VCSEL_Breakout.kicad_sch  fsm.cpp
Lander/: Cargo.toml  README.md
Lander/src/: algorithms.rs  control_loop.rs  main.rs
Monoprop/: Cargo.toml
Monoprop/GroundControl/: Cargo.toml
Monoprop/GroundControl/src/: main.rs  mpc_crate.rs
Scripts/: activate  activate.bat
Sensing&Controls/: mahony.py
ekf/: pyvenv.cfg
fireware/: example.txt
firmware/: attach.sh  build.sh  finalFirmware_skeleton.cpp  monitor.sh  platformio.ini  teensy41.ld
(+690 files in other folders)
