[package]
name = "GroundControl"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
optimization_engine = "0.6.0"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["intel-mkl"] }

Common = { path = "../Common" }